--- a/dockerfiles/tester/Dockerfile
+++ b/dockerfiles/tester/Dockerfile
@@ -14,6 +14,8 @@ RUN \
   apt-get autoremove -y && apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+RUN
+
 COPY lib /opt/uphold/lib
 COPY environment.rb tester.rb /opt/uphold/
 
